# sloth-baby

./: README.md
example1/: Main.java
example2/: Main.java
example3/: Main.java
example4/: Chennai.java  Country.java  Main.java  TamilNadu.java
sast/example1/: Dockerfile  Main.java  Secrets.java
sast/example2/: Car.java  Dockerfile  Hurracan.java  Lamborghini.java  Main.java
sast/example3/: Atm.java  Bank.java  Dockerfile  Main.java  Wallet.java
sast/example4/: Chennai.java  ChennaiHelper.java  Country.java  Dockerfile  Helper.java  India.java  Main.java  TamilNadu.java
sca/js/example1/: package-lock.json  package.json
sca/python/example1/: pyproject.toml
sca/ruby/example1/: Gemfile
